# easy-debug-view

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  cmake-single-platform.yml  release.yml
source/: easy_debug_view.cpp
